--- a/index.html
+++ b/index.html
@@ -25,34 +25,74 @@
       <div class="row">
         <div class="work">
           <img src="images/gatebox.jpg">
+          <p class="work-detail">
+            <span class="work-title">Gatebox</span><br>
+            2次元のキャラクターと暮らせるバーチャルホームロボット. プロトタイプのソフトウェア開発に携わりました.
+          </p>
         </div>
         <div class="work">
           <img src="images/tankore.png">
+          <p class="work-detail">
+            <span class="work-title">たんこれ</span><br>
+            大学の単位取得にまつわる情報戦を勝ち抜くサービス.
+            サーバーサイド開発を担当しました.
+          </p>
         </div>
         <div class="work">
           <img src="images/dengencafe.png">
+          <p class="work-detail">
+            <span class="work-title">電源カフェ</span><br>
+            電源のあるカフェを探せるアプリ.
+            スマホアプリ開発・Webフロント開発に携わりました.
+          </p>
         </div>
       </div>
       <div class="row">
         <div class="work">
           <img src="images/honja.png">
+          <p class="work-detail">
+            <span class="work-title">HONJA</span><br>
+            多言語ひらがな翻字サービス.
+            吉開章と共同開発.
+          </p>
         </div>
         <div class="work">
           <img src="images/bauer.jpg">
+          <p class="work-detail">
+            <span class="work-title">agent.bauer</span><br>
+            Facebookなりすまし自動発見Bot.
+            自身が被害にあった時に活躍した.
+          </p>
         </div>
         <div class="work">
           <img src="images/godog.gif">
+          <p class="work-detail">
+            <span class="work-title">Godog</span><br>
+            PCのファイルシステムの中を動き回り、ファイルをコピーして食べるAlifeプログラム.
+            破壊はしないので無害です.
+          </p>
         </div>
       </div>
       <div class="row">
         <div class="work">
           <img src="images/tsystem.png">
+          <p class="work-detail">
+            <span class="work-title">tsystem</span><br>
+            PC Backup・Sync・Reset・MakeUpシステム.
+          </p>
         </div>
         <div class="work">
           <img src="images/hfs.png">
+          <p class="work-detail">
+            <span class="work-title">Hack for Spring</span><br>
+            新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.
+          </p>
         </div>
         <div class="work">
           <img src="images/github.png">
+          <p class="work-detail">
+            <span class="work-title">その他ツール</span><br>
+          </p>
         </div>
       </div>
     </div>
