--- a/index.html
+++ b/index.html
@@ -24,77 +24,118 @@
     <div class="works">
       <div class="row">
         <div class="work">
-          <img src="images/gatebox.jpg">
-          <p class="work-detail">
-            <span class="work-title">Gatebox</span><br>
-            2次元のキャラクターと暮らせるバーチャルホームロボット. プロトタイプのソフトウェア開発に携わりました.
-          </p>
+          <a href="https://gatebox.ai">
+            <img src="images/gatebox.jpg">
+            <p class="work-detail">
+              <span class="work-title">Gatebox</span><br><br>
+              2次元のキャラクターと暮らせるバーチャルホームロボット. プロトタイプのソフトウェア開発に携わりました.
+            </p>
+          </a>
         </div>
         <div class="work">
-          <img src="images/tankore.png">
-          <p class="work-detail">
-            <span class="work-title">たんこれ</span><br>
-            大学の単位取得にまつわる情報戦を勝ち抜くサービス.
-            サーバーサイド開発を担当しました.
-          </p>
+          <a href="https://www.tankore.jp/service.html">
+            <img src="images/tankore.png">
+            <p class="work-detail">
+              <span class="work-title">たんこれ</span><br><br>
+              大学の単位取得にまつわる情報戦を勝ち抜くサービス.
+              サーバーサイド開発を担当しました.
+            </p>
+          </a>
         </div>
         <div class="work">
-          <img src="images/dengencafe.png">
-          <p class="work-detail">
-            <span class="work-title">電源カフェ</span><br>
-            電源のあるカフェを探せるアプリ.
-            スマホアプリ開発・Webフロント開発に携わりました.
-          </p>
+          <a href="https://dengen-cafe.com">
+            <img src="images/dengencafe.png">
+            <p class="work-detail">
+              <span class="work-title">電源カフェ</span><br><br>
+              電源のあるカフェを探せるアプリ.
+              スマホアプリ開発・Webフロント開発に携わりました.
+            </p>
+          </a>
         </div>
       </div>
       <div class="row">
         <div class="work">
-          <img src="images/honja.png">
-          <p class="work-detail">
-            <span class="work-title">HONJA</span><br>
-            多言語ひらがな翻字サービス.
-            吉開章と共同開発.
-          </p>
+          <a href="https://yoshikai.net/HONJA">
+            <img src="images/honja.png">
+            <p class="work-detail">
+            <span class="work-title">HONJA</span><br><br>
+              多言語ひらがな翻字サービス.
+              吉開章と共同開発.
+            </p>
+          </a>
         </div>
         <div class="work">
           <img src="images/bauer.jpg">
           <p class="work-detail">
-            <span class="work-title">agent.bauer</span><br>
+          <span class="work-title">agent.bauer</span><br><br>
             Facebookなりすまし自動発見Bot.
             自身が被害にあった時に活躍した.
           </p>
         </div>
         <div class="work">
-          <img src="images/godog.gif">
-          <p class="work-detail">
-            <span class="work-title">Godog</span><br>
-            PCのファイルシステムの中を動き回り、ファイルをコピーして食べるAlifeプログラム.
-            破壊はしないので無害です.
-          </p>
+          <a href="https://github.com/TakutoYoshikai/godog">
+            <img src="images/godog.gif">
+            <p class="work-detail">
+            <span class="work-title">Godog</span><br><br>
+              PCのファイルシステムの中を動き回り、ファイルをコピーして食べるAlifeプログラム.
+              破壊はしないので無害です.
+            </p>
+          </a>
         </div>
       </div>
       <div class="row">
         <div class="work">
-          <img src="images/tsystem.png">
-          <p class="work-detail">
-            <span class="work-title">tsystem</span><br>
-            PC Backup・Sync・Reset・MakeUpシステム.
-          </p>
+          <a href="https://github.com/TakutoYoshikai/tsystem">
+            <img src="images/tsystem.png">
+            <p class="work-detail">
+            <span class="work-title">tsystem</span><br><br>
+              PC Backup・Sync・Reset・MakeUpシステム.
+            </p>
+          </a>
         </div>
         <div class="work">
-          <img src="images/hfs.png">
-          <p class="work-detail">
-            <span class="work-title">Hack for Spring</span><br>
-            新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.
-          </p>
+          <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html">
+            <img src="images/hfs.png">
+            <p class="work-detail">
+              <span class="work-title">Hack for Spring</span><br><br>
+              新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.
+            </p>
+          </a>
         </div>
         <div class="work">
-          <img src="images/github.png">
-          <p class="work-detail">
-            <span class="work-title">その他ツール</span><br>
-          </p>
+          <a href="https://github.com/TakutoYoshikai">
+            <img src="images/github.png">
+            <p class="work-detail">
+              <span class="work-title">その他ツール</span><br><br>
+            </p>
+          </a>
         </div>
       </div>
+    </div>
+    <div class="profile-section">
+      <p class="profile-title">School</p>
+      <p>
+      <a href="https://code.ac.jp">コードアカデミー高等学校</a><br>
+      慶應義塾大学総合政策学部
+      </p>
+      <p class="profile-title">Skills</p>
+      <p>
+        サーバーサイド<br>
+        フロントエンドWeb<br>
+        iOSアプリ<br>
+        自動化<br>
+        機械学習<br>
+      </p>
+      <p class="profile-title">Awards</p>
+      <p>
+      Awards<br>
+      ウィンクルハッカソン優勝<br>
+      ExtremeHomeHack LittleBits賞, Yahoo myThings賞, Macnica賞, NEC PC賞<br>
+      </p>
+      <p class="profile-title">Contact</p>
+      <p>
+        takuto@yoshikai.net
+      </p>
     </div>
   </body>
 </html>
