--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="works">
       <div class="row">
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://gatebox.ai">
             <img src="images/gatebox.jpg">
             <p class="work-detail">
@@ -32,7 +32,7 @@
             </p>
           </a>
         </div>
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://www.tankore.jp/service.html">
             <img src="images/tankore.png">
             <p class="work-detail">
@@ -42,7 +42,7 @@
             </p>
           </a>
         </div>
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://dengen-cafe.com">
             <img src="images/dengencafe.png">
             <p class="work-detail">
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://yoshikai.net/HONJA">
             <img src="images/honja.png">
             <p class="work-detail">
@@ -64,7 +64,7 @@
             </p>
           </a>
         </div>
-        <div class="work">
+        <div class="work" ontouchstart="">
           <img src="images/bauer.jpg">
           <p class="work-detail">
           <span class="work-title">agent.bauer</span><br><br>
@@ -72,7 +72,7 @@
             自身が被害にあった時に活躍した.
           </p>
         </div>
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/godog">
             <img src="images/godog.gif">
             <p class="work-detail">
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/tsystem">
             <img src="images/tsystem.png">
             <p class="work-detail">
@@ -93,7 +93,7 @@
             </p>
           </a>
         </div>
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html">
             <img src="images/hfs.png">
             <p class="work-detail">
@@ -102,7 +102,7 @@
             </p>
           </a>
         </div>
-        <div class="work">
+        <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai">
             <img src="images/github.png">
             <p class="work-detail">
