--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
     <meta property="og:title" content="Takuto's Portfolio">
-    <meta property="og:image" content="https://yoshikai.net/images/ogp.png">
+    <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@TakutoYoshikai">
     <meta name="twitter:description" content="プログラマー吉開拓人の関わったプロジェクト、個人作品">
