--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <a href="https://github.com/TakutoYoshikai">
             <img src="images/github.png">
             <p class="work-detail">
-              <span class="work-title">その他ツール</span>
+              <span class="work-title">その他作品</span>
             </p>
           </a>
         </div>
