--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="work" ontouchstart="">
           <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html">
-            <img src="images/hfs.png">
+            <img src="images/hfs2.png">
             <p class="work-detail">
               <span class="work-title">Hack for Spring</span><br><br>
               新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.
