change meta tag

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <script src="index.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
-    <meta property="og:title" content="Takuto's Portfolio">
+    <meta property="og:title" content="Takuto Yoshikai">
     <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@TakutoYoshikai">
-    <meta name="twitter:description" content="プログラマー吉開拓人の関わったプロジェクト、個人作品">
+    <meta name="twitter:description" content="ソフトウェアクリエイター吉開拓人のポートフォリオ">
     <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
-    <meta name="description" content="プログラマー吉開拓人の関わったプロジェクト、個人作品">
+    <meta name="description" content="ソフトウェアクリエイター吉開拓人のポートフォリオ">
     <link rel="icon" type="image/png" href="./images/favicon.png" sizes="32x32">
-    <title>Takuto Yoshikai's Portfolio</title>
+    <title>Takuto Yoshikai</title>
   </head>
   <body>
     <div class="name-section">
