--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <script src="index.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
-    <meta property="og:title" content="Takuto Yoshikai">
+    <meta property="og:title" content="TAKUTO YOSHIKAI">
     <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@TakutoYoshikai">
-    <meta name="twitter:description" content="ソフトウェアクリエイター吉開拓人のポートフォリオ">
+    <meta name="twitter:description" content="SOFTWARE CREATOR / HACKER">
     <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
-    <meta name="description" content="ソフトウェアクリエイター吉開拓人のポートフォリオ">
+    <meta name="description" content="SOFTWARE CREATOR / HACKER">
     <link rel="icon" type="image/png" href="./images/favicon.png" sizes="32x32">
     <title>Takuto Yoshikai</title>
   </head>
