add profile icon and text

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         </div>
       </div>
     </div>
+    <div class="profile-flex">
+      <img src="images/takuto-meshi.png" class="profile-icon">
+      <div class="profile-text">
+        <p>
+        <span class="profile-name">吉開拓人</span><br>高校からフリーランスのプログラマーとして活動.<br> 趣味と仕事の両方で日々コードを書く.
+        </p>
+      </div>
+    </div>
     <div class="profile-section">
       <p class="profile-title">School</p>
       <p>
