--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="works">
       <div class="row">
         <div class="work" ontouchstart="">
-          <a href="https://gatebox.ai">
+          <a href="https://gatebox.ai" target="_blank">
             <img src="images/gatebox.jpg">
             <p class="work-detail">
               <span class="work-title">Gatebox</span><br><br>
@@ -31,7 +31,7 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://www.tankore.jp/service.html">
+          <a href="https://www.tankore.jp/service.html" target="_blank">
             <img src="images/tankore.png">
             <p class="work-detail">
               <span class="work-title">たんこれ</span><br><br>
@@ -41,7 +41,7 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://dengen-cafe.com">
+          <a href="https://dengen-cafe.com" target="_blank">
             <img src="images/dengencafe.png">
             <p class="work-detail">
               <span class="work-title">電源カフェ</span><br><br>
@@ -53,7 +53,7 @@
       </div>
       <div class="row">
         <div class="work" ontouchstart="">
-          <a href="https://yoshikai.net/HONJA">
+          <a href="https://yoshikai.net/HONJA" target="_blank">
             <img src="images/honja.png">
             <p class="work-detail">
             <span class="work-title">HONJA</span><br><br>
@@ -71,7 +71,7 @@
           </p>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/godog">
+          <a href="https://github.com/TakutoYoshikai/godog" target="_blank">
             <img src="images/godog.gif">
             <p class="work-detail">
             <span class="work-title">Godog</span><br><br>
@@ -83,7 +83,7 @@
       </div>
       <div class="row">
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/tsystem">
+          <a href="https://github.com/TakutoYoshikai/tsystem" target="_blank">
             <img src="images/tsystem.png">
             <p class="work-detail">
             <span class="work-title">tsystem</span><br><br>
@@ -92,7 +92,7 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html">
+          <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html" target="_blank">
             <img src="images/hfs2.png">
             <p class="work-detail">
               <span class="work-title">Hack for Spring</span><br><br>
@@ -101,7 +101,7 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai">
+          <a href="https://github.com/TakutoYoshikai" target="_blank">
             <img src="images/github.png">
             <p class="work-detail">
               <span class="work-title">その他作品</span>
