--- a/index.html
+++ b/index.html
@@ -97,6 +97,32 @@ var languages = window.navigator.languages || [
       </div>
       <div class="row">
         <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/viking-challenge" target="_blank">
+            <img src="https://alu-web-herokuapp-com.global.ssl.fastly.net/cropped_images/62u6T6t6oudBT7DWMRVRjuzHSRY2/c_1574508770565?auto=webp&format=jpg&width=680">
+            <p class="work-detail">
+            <span class="work-title">Viking Challenge</span><br><br>
+              王様達のヴァイキング第5巻に登場したvalkyrijaとzer0のプログラムを誰でも作って試せるシステム
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/conan" target="_blank">
+            <img src="https://cdn-ak.f.st-hatena.com/images/fotolife/u/under-mogura/20180514/20180514151844.jpg">
+            <p class="work-detail">
+            <span class="work-title">Conan</span><br><br>
+              インターネット上の匿名で嫌がらせをしてくる人を特定するシステム
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <img src="images/mykenpo-blur.png">
+          <p class="work-detail">
+          <span class="work-title">Coming Soon</span><br><br>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/tsystem" target="_blank">
             <img src="images/tsystem.png">
             <p class="work-detail">
