rm viking image

--- a/en.html
+++ b/en.html
@@ -83,6 +83,32 @@
       </div>
       <div class="row">
         <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/viking-challenge" target="_blank">
+            <img src="">
+            <p class="work-detail">
+            <span class="work-title">Viking Challenge</span><br><br>
+              A simulation of Japanese comic 「Kings Viking」valkyrja's money laundering program.
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/conan" target="_blank">
+            <img src="https://cdn-ak.f.st-hatena.com/images/fotolife/u/under-mogura/20180514/20180514151844.jpg">
+            <p class="work-detail">
+            <span class="work-title">Conan</span><br><br>
+            This is a system to identify online anonymous people.
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <img src="images/mykenpo-blur.png">
+          <p class="work-detail">
+          <span class="work-title">Coming Soon</span><br><br>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/tsystem" target="_blank">
             <img src="images/tsystem.png">
             <p class="work-detail">
