--- a/en.html
+++ b/en.html
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/viking-challenge" target="_blank">
-            <img src="">
+            <img src="images/thinkpad.jpg">
             <p class="work-detail">
             <span class="work-title">Viking Challenge</span><br><br>
               A simulation of Japanese comic 「Kings Viking」valkyrja's money laundering program.
