--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var languages = window.navigator.languages || [
       <div class="row">
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/viking-challenge" target="_blank">
-            <img src="">
+            <img src="images/thinkpad.jpg">
             <p class="work-detail">
             <span class="work-title">Viking Challenge</span><br><br>
               王様達のヴァイキング第5巻に登場したvalkyrijaとzer0のプログラムを誰でも作って試せるシステム
