--- a/en.html
+++ b/en.html
@@ -16,6 +16,10 @@
     <style>
       .profile-section > p {
         font-size: 14px!important;
+        letter-spacing: 1px!important;
+      }
+      .work-detail {
+        letter-spacing: 1px!important;
       }
     </style>
   </head>
@@ -139,7 +143,7 @@
     <div class="profile-section">
       <p class="profile-title">School</p>
       <p>
-      <a href="https://code.ac.jp">Code Academy high school (Japan)</a><br>
+      Code Academy High School (Japan)
       Keio University Bachelor of Arts in Policy Management
       </p>
       <p class="profile-title">Skills</p>
