--- a/en.html
+++ b/en.html
@@ -163,6 +163,10 @@
       <p>
         takuto@yoshikai.net
       </p>
+      <p class="profile-title">About me</p>
+      <p>
+        <a href="/interview.html">profile page</a>
+      </p>
     </div>
   </body>
 </html>
