--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@ var languages = window.navigator.languages || [
       <p>
         takuto@yoshikai.net
       </p>
+      <p class="profile-title">About me</p>
+      <p>
+        <a href="/interview.html">プロフィールページ</a>
+      </p>
     </div>
   </body>
 </html>
