--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ var languages = window.navigator.languages || [
       </p>
       <p class="profile-title">About me</p>
       <p>
-        <a href="/interview.html">プロフィールページ</a>
+        <a href="/interview.html" style="text-decoration: underline;">プロフィールページ</a>
       </p>
     </div>
   </body>
