--- a/en.html
+++ b/en.html
@@ -165,7 +165,7 @@
       </p>
       <p class="profile-title">About me</p>
       <p>
-        <a href="/interview.html">profile page</a>
+        <a href="/interview.html" style="text-decoration: underline;">profile page</a>
       </p>
     </div>
   </body>
