--- a/en.html
+++ b/en.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
     <meta property="og:title" content="TAKUTO YOSHIKAI">
-    <meta property="og:image" content="https://yoshikai.net/images/ogp2.jpg">
+    <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="SOFTWARE CREATOR / HACKER">
     <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
