--- a/interview.html
+++ b/interview.html
@@ -8,7 +8,209 @@
   </head>
   <body>
     <div class="chat" id="chat">
+      <div class="center">
+    <p class="title">
+      自己紹介
+    </p>
+  </div><div class="my-message">
+    <div class="message-text">では、簡単な自己紹介をお願いします。</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">吉開拓人といいます。中学からプログラミングを始めて、現在大学生をしながらフリーランスのソフトウェアクリエイターとして働いています。主にWebサービスや、スマホアプリなんかを作ってますね</div>
+  </div><div class="my-message">
+    <div class="message-text">学生をやりながら働いてるんだ。いろいろ聞きたいところだけど、まずは、どんなものをつくってるか詳しく教えて</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">高校生の頃は、Gateboxというロボットを作る会社で働いていました。アニメのキャラクターと一緒に生活できるホログラムロボットです。好きなアニメキャラと声で会話したり、スマホでチャットしたりできます。</div>
+  </div><div class="my-message">
+    <div class="message-text">高校生の頃からがっつりやってるね。。最近はどんな仕事を？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">最近は、お仕事でビットコインを使った決済プログラムを作ってます。最近流行りの仮想通貨を使って、誰でも自分が作ったプログラムを売れるような仕組みを作っています。あと趣味で僕のポートフォリオサイトとか、このプロフィールサイトを作ったりしてますね。</div>
+  </div><div class="my-message">
+    <div class="message-text">簡単な仕事では無さそうだけど、たくとくんは大学生もやってるんだよね。なんだか只者じゃない感じがするけど、仕事と学生の両立はどうバランスをとってるの？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">確かに大学と両立するのは厳しいですね。なので、仕事は週２日ぐらいにとどめておいて、勉強時間の合間にやっています。</div>
+  </div><div class="my-message">
+    <div class="message-text">うまく両立してるんだね。ところで、たくとくんの大学について聞いても良いですか？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">僕は今慶應義塾大学の総合政策学部に所属しています。SFCと呼ばれるキャンパスで、いろんな専門分野を持つ人たちが集まるところです。日々優秀な仲間から刺激を貰っています。</div>
+  </div><div class="my-message">
+    <div class="message-text">ゼミやサークルには入ってるの？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">ゼミは村井研という所に入っていて、インターネットを社会にどう役立てるかを研究しています。サークルは今は入ってません。</div>
+  </div><div class="my-message">
+    <div class="message-text">インターネットは充分役立っていそうだけど、さらに役立てたいってこと？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">そうです。今でも貧困や情報格差などの社会問題はありますから、その果てしない問題を、インターネットを使って解決できないか、ということですね。</div>
+  </div><div class="my-message">
+    <div class="message-text">なるほどね。そういうところでたくとくんのプログラミングを通しての経験が活かされてたりするの？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">結構活かされてる部分は多いんですけど、論文を結構読むのが大変で、プログラミング以外の所が結構難しいです。</div>
+  </div><div class="my-message">
+    <div class="message-text">プログラミングの話しを聞くと最強のイメージを持つけど、そういうところがあって安心した(笑) 話しは少し変わるけど、たくとくんはプログラミング以外で趣味とかはあるの？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="center">
+    <p class="title">
+      趣味の話
+    </p>
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">趣味ですか、休みの日には行きつけのカフェに行ったり、あとコーヒーを家でドリップして飲んだりしてますね。コーヒーが好きです！</div>
+  </div><div class="my-message">
+    <div class="message-text">コーヒー好きでカフェに行く人はよくいるけど、家でコーヒーを淹れるのはなかなかのこだわりですね。</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">そうなんです！最近友達からコーヒーの器具をプレゼントしてもらって、それがきっかけでハマっちゃいました。最近では結構美味しく淹れられるようになったんですよ！</div>
+  </div><div class="my-message">
+    <div class="message-text">えー素敵なプレゼント。。自宅での淹れ方とかちょっとしたこだわりとかあればぜひ教えて。</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">僕は最初蒸らしの段階で一回でお湯をある程度淹れて、30秒ぐらい待ってから、残りのお湯を注いでたんですけど、蒸らしの時のガスの抜け方を見ながら、臨機応変にお湯を淹れるようにしたら、結構美味しくなりました。</div>
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">合ってるかわからないですけどね！</div>
+  </div><div class="my-message">
+    <div class="message-text">すごいこだわってる。でも、何かにこだわりをもって向き合ったり、突き詰めたりするのはいいことだよね。普段の生活で何かちょっとしたこだわりを持ってる事とかある？コーヒー以外で</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">こだわりかー。クリエイティブな作業をするための、設備とかはこだわっています。家には49インチの横長のディスプレイと、自分ではんだ付けして作ったキーボードがあります。仕事のパフォーマンスにも大きく関わってくるので、そこには結構多額のお金を投資しています。</div>
+  </div><div class="my-message">
+    <div class="message-text">すごい！写真とかも見れる？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="my-message">
+    <div class="message-text">
+      <img class="message-image" src="images/display.jpg">
     </div>
-    <script src="interview.js"></script>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="my-message">
+    <div class="message-text">
+      <img class="message-image" src="images/keyboard.jpg">
+    </div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="my-message">
+    <div class="message-text">ありがとう！かなり綺麗に整えられてるね。システムも作れるしキーボードも作れちゃうのか。そういうのは全て独学？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">独学です！プログラミングも電子工作も、全部遊びの一貫として勉強しています。そのスタンスのほうが上達するんですよ。</div>
+  </div><div class="my-message">
+    <div class="message-text">やりたくない勉強とかは無理してやらない？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">前までそうだったんですけど、嫌いな勉強も気楽に趣味として挑戦してみたりすると意外と好きになったりするって気づいたんですよね。</div>
+  </div><div class="my-message">
+    <div class="message-text">へー！なるほど！勉強への心持ちが変わってきたんだ。そういうところでいくと、最近はプログラミング以外で何か勉強していることはある？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">前まで苦手だったんですけど、最近数学の本をたくさん買うようになりました。でも問題をたくさん解くわけじゃなくて、数学の世界をミステリー小説みたいな気持ちで読むのが好きなんです。</div>
+  </div><div class="my-message">
+    <div class="message-text">数学の世界をミステリー小説みたいに、、、そんな風に読めたら本当に楽しそう。ちなみに、それはどんな本？？、、</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">最近よく読んでるのはオイラーの贈物という本ですね。オイラーが数学者の中で一番好きなんですよ。</div>
+  </div><div class="my-message">
+    <div class="message-text">ど、どういうところが好きなんですか？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">世界で一番美しい数式を発見したと言われています。オイラーの等式というんですけど、それが好きなんですよね。</div>
+  </div><div class="my-message">
+    <div class="message-text">たくとくんはプログラミングや勉強が得意だということがわかったんだけど、他には何か得意なこととかある？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">あとは、掃除ですね。前まで散らかり放題の部屋だったんですけど、最近掃除のコツを覚えて、それ以来自分の部屋で仕事できるぐらいキレイになりました。</div>
+  </div><div class="my-message">
+    <div class="message-text">たしかにすごく綺麗なデスクだったもんね。ここまでいくと完璧な印象があるんだけど、逆に不得意な事とかはある？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">苦手なこと、筋トレとかはあまり続かないですね。ウォーキングは毎日続けてるので運動不足ではないんですけど、中々身体が大きくなりませんね。</div>
+  </div><div class="my-message">
+    <div class="message-text">あ、よかった。これでムキムキでスポーツ万能とかだとちょっと怖いもん。でも、運動が嫌いとかではないから健康的でいいね。とても。</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="center">
+    <p class="title">
+      恋愛観の話
+    </p>
+  </div><div class="my-message">
+    <div class="message-text">たくとくんは好きな女性のタイプとかある？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">落ち着いていて、ポジティブでよく笑う人が好きですね</div>
+  </div><div class="my-message">
+    <div class="message-text">外見に関しては？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">外見か、、髪がキレイな方はとても魅力的に感じます</div>
+  </div><div class="my-message">
+    <div class="message-text">外見にはあまり多くを求めない感じだね。髪が綺麗っていうのも意外と内面を表している気もする。</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="my-message">
+    <div class="message-text">今彼女はいる？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">今はいないです。</div>
+  </div><div class="my-message">
+    <div class="message-text">じゃあ、もし彼女ができたらどんな付き合い方をしたい？</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">お互いの意思を尊重できるような良い関係性を築きたいです。いろんな場所に遊びに行ったり、何もしてなくても、無言でも、一緒に居て楽な関係になりたいです。</div>
+  </div><div class="my-message">
+    <div class="message-text">いいよね。本当に、お互いの事を尊重するの大事！何かあってもちゃんと自分の言葉で話し合えたりね！</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">本当にそう思います。</div>
+  </div><div class="center">
+    <p class="title">
+      今後の展望
+    </p>
+  </div><div class="my-message">
+    <div class="message-text">ここまで趣味から仕事、私生活や恋愛観について聞いてきたけど、たくとくんはまだ意外にも若干22歳だよね。これからの人生まだまだだけど、今後の展望とかあれば聞かせて！</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">そうですね、まず自分の実力はこれまで通り高めていこうと思います。優れたプログラマーは魔法使いって呼ばれることがあるので、魔法を使っているような、すごい事ができるクリエイターになりたいです。</div>
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">あとは、周りの人を大切にして、ラッキーを逃さないようにしたいです。僕の名前は吉開拓人、吉を開拓する人と書くので、その名の通りに生きていけたらと思います。</div>
+  </div><div class="my-message">
+    <div class="message-text">すごいことができるようになったたくとくんは本当にたくさんの人を幸せにしてくれそうだね。。今後のたくと氏に期待してる！ありがとうございました！</div>
+    <img src="images/yuta.jpg" class="message-icon">
+  </div><div class="message">
+    <img src="images/takuto-meshi.png" class="message-icon">
+    <div class="message-text">ありがとうございました！</div>
+  </div><div class="center">
+    <p class="title">
+      取材者:yuta koido
+    </p>
+  </div>
+
+    </div>
   </body>
 </html>
