--- a/en.html
+++ b/en.html
@@ -140,11 +140,13 @@
         </div>
       </div>
     </div>
-    <div class="profile-section">
+    <div class="profile-section" style="width:300px">
       <p class="profile-title">School</p>
       <p>
       Code Academy High School (Japan)
-      Keio University Bachelor of Arts in Policy Management
+      </p>
+      <p>
+      Keio University (Japan)
       </p>
       <p class="profile-title">Skills</p>
       <p>
