--- a/en.html
+++ b/en.html
@@ -155,6 +155,7 @@
         iOS app development<br>
         automation<br>
         machine learning<br>
+        blockchain<br>
       </p>
       <p class="profile-title">Awards</p>
       <p>
