--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ var languages = window.navigator.languages || [
         iOSアプリ<br>
         自動化<br>
         機械学習<br>
+        ブロックチェーン<br>
       </p>
       <p class="profile-title">Awards</p>
       <p>
