--- a/en.html
+++ b/en.html
@@ -105,10 +105,13 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <img src="images/mykenpo-blur.png">
-          <p class="work-detail">
-          <span class="work-title">Coming Soon</span><br><br>
-          </p>
+          <a href="https://github.com/gaiax/oreki" target="_blank">
+            <img src="images/oreki.png">
+              <p class="work-detail">
+              <span class="work-title">Oreki</span><br><br>
+                Original Endpoint Sales Kit
+              </p>
+          </a>
         </div>
       </div>
       <div class="row">
