--- a/en.html
+++ b/en.html
@@ -76,11 +76,11 @@
           </p>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/godog" target="_blank">
-            <img src="images/godog.gif">
+          <a href="https://github.com/TakutoYoshikai/nats-io" target="_blank">
+            <img src="images/nats.png" style="background-color:#BCBD8B">
             <p class="work-detail">
-            <span class="work-title">Godog</span><br><br>
-              The virtual pet program in computers. Not a malware. It doesn't crack computers.
+            <span class="work-title">nats</span><br><br>
+              A program to hide file into executable binary 
             </p>
           </a>
         </div>
