--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@ var languages = window.navigator.languages || [
           </p>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/godog" target="_blank">
-            <img src="images/godog.gif">
+          <a href="https://github.com/TakutoYoshikai/nats-io" target="_blank">
+            <img src="images/nats.png" style="background-color:#BCBD8B">
             <p class="work-detail">
-            <span class="work-title">Godog</span><br><br>
-              PCのファイルシステムの中を動き回り、ファイルをコピーして食べるAlifeプログラム.
-              破壊はしないので無害です.
+            <span class="work-title">nats</span><br><br>
+              実行ファイルにデータを隠せるステガノグラフィプログラム
             </p>
           </a>
         </div>
