--- a/en.html
+++ b/en.html
@@ -76,7 +76,7 @@
           </p>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/nats-io" target="_blank">
+          <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
             <!-- image designed by @callme_2323 -->
             <img src="images/nats.png" style="background-color:#BCBD8B">
             <p class="work-detail">
