--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ var languages = window.navigator.languages || [
           </p>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/nats-io" target="_blank">
+          <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
             <!-- image designed by @callme_2323 -->
             <img src="images/nats.png" style="background-color:#BCBD8B">
             <p class="work-detail">
